force-app/main/default/objects/Quote/fields/CONGA_Codigo_promocion__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Codigo_promocion__c</fullName>
    <formula>Opportunity.Promocion__r.Codigo_de_la_promocion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Codigo promocion</label>
    <type>Text</type>
</CustomField>