force-app/main/default/objects/Quote/fields/CONGA_Cuenta_Activa_2__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Cuenta_Activa_2__c</fullName>
    <formula>Opportunity.Promocion__r.Cuenta_Activa_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Cuenta Activa 2</label>
    <type>Checkbox</type>
</CustomField>