force-app/main/default/objects/Quote/fields/CONGA_Cuenta_Bancaria_2__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Cuenta_Bancaria_2__c</fullName>
    <formula>Opportunity.Promocion__r.Numero_de_cuenta_bancaria_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Cuenta Bancaria 2</label>
    <type>Text</type>
</CustomField>