force-app/main/default/objects/Quote/fields/CONGA_Email_promocion_comercializadora__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Email_promocion_comercializadora__c</fullName>
    <formula>Opportunity.Promocion__r.Email_promocion_comercializadora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Email promoción comercializadora</label>
    <type>Text</type>
</CustomField>