force-app/main/default/objects/Quote/fields/CONGA_Firma_contrato_Total__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Firma_contrato_Total__c</fullName>
    <formula>CONGA_Firma_contrato_IVA__c +  Importe_firma_contrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Firma_contrato_Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>