force-app/main/default/objects/Quote/fields/CONGA_Importe_cuota_extra_IVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Importe_cuota_extra_IVA__c</fullName>
    <formula>( Importe_cuota_extra__c *  Opportunity.Importe_Cuota_Extra__c ) / 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Importe cuota extra IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>