force-app/main/default/objects/Quote/fields/CONGA_Importe_escritura_IVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Importe_escritura_IVA__c</fullName>
    <formula>( Importe_Escritura__c *  Opportunity.Porcentaje_IVA__c ) / 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Importe escritura IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>