force-app/main/default/objects/Quote/fields/CONGA_Importe_escritura_Total__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Importe_escritura_Total__c</fullName>
    <formula>CONGA_Importe_escritura_IVA__c +  Importe_Escritura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Importe escritura Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>