force-app/main/default/objects/Quote/fields/CONGA_Localizacion_Promocion__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Localizacion_Promocion__c</fullName>
    <formula>TEXT(Opportunity.Promocion__r.Tipo_via__c) + &quot; &quot; +  Opportunity.Promocion__r.Nombre_via__c + &quot; &quot; +  TEXT(Opportunity.Promocion__r.N_Via__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Localizacion Promocion</label>
    <type>Text</type>
</CustomField>