force-app/main/default/objects/Quote/fields/CONGA_Mostrar_Fecha_de_Escritura__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Mostrar_Fecha_de_Escritura__c</fullName>
    <formula>Opportunity.Promocion__r.Mostrar_Fecha_de_Escritura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Mostrar_Fecha_de_Escritura</label>
    <type>Checkbox</type>
</CustomField>