force-app/main/default/objects/Quote/fields/CONGA_N_Viviendas__c.field-meta.xml
<CustomField>
    <fullName>CONGA_N_Viviendas__c</fullName>
    <formula>Opportunity.Promocion__r.N_Viviendas_totales_promocion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Nº Viviendas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>