force-app/main/default/objects/Quote/fields/CONGA_Numero_de_documento_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Numero_de_documento_Cuenta__c</fullName>
    <formula>Opportunity.Account.N_Documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Número de documento Cuenta</label>
    <type>Text</type>
</CustomField>