force-app/main/default/objects/Quote/fields/CONGA_Promocion_Name__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Promocion_Name__c</fullName>
    <formula>Opportunity.Promocion_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Promocion Name</label>
    <type>Text</type>
</CustomField>