force-app/main/default/objects/Quote/fields/CONGA_PromoId__c.field-meta.xml
<CustomField>
    <fullName>CONGA_PromoId__c</fullName>
    <description>Id de la Promocion</description>
    <formula>Opportunity.Promocion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Id Promocion</label>
    <type>Text</type>
</CustomField>