force-app/main/default/objects/Quote/fields/CONGA_ReservaIva__c.field-meta.xml
<CustomField>
    <fullName>CONGA_ReservaIva__c</fullName>
    <formula>Opportunity.Reserva__c * (1 + Opportunity.Porcentaje_IVA__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Reserva Iva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>