force-app/main/default/objects/Quote/fields/CONGA_Semestre_de_escrituracion__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Semestre_de_escrituracion__c</fullName>
    <formula>TEXT(Opportunity.Promocion__r.Semestre_de_escrituracion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Semestre_de_escrituracion</label>
    <type>Text</type>
</CustomField>