force-app/main/default/objects/Quote/fields/CONGA_Socio_Empresa_Promotora__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Socio_Empresa_Promotora__c</fullName>
    <formula>Opportunity.Promocion__r.Socio_Empresa_Promotora__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Socio Empresa Promotora</label>
    <type>Text</type>
</CustomField>