force-app/main/default/objects/Quote/fields/CONGA_Titularidad_de_la_cuenta_2__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Titularidad_de_la_cuenta_2__c</fullName>
    <formula>Opportunity.Promocion__r.Titularidad_de_la_cuenta2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Titularidad de la cuenta 2</label>
    <type>Text</type>
</CustomField>