force-app/main/default/objects/Quote/fields/CONGA_Tlf_promocion_comercializadora__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Tlf_promocion_comercializadora__c</fullName>
    <formula>Opportunity.Promocion__r.Telefono_promocion_comercializadora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Tlf promocion comercializadora</label>
    <type>Text</type>
</CustomField>