force-app/main/default/objects/Quote/fields/CONGA_Year_Inicio_Escrituracion__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Year_Inicio_Escrituracion__c</fullName>
    <formula>YEAR(Opportunity.Promocion__r.Inicio_de_escrituraciones__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Año Inicio Escrituración</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>