force-app/main/default/objects/Quote/fields/Importe_cuota__c.field-meta.xml
<CustomField>
    <fullName>Importe_cuota__c</fullName>
    <formula>((Opportunity.Pago_Contrato__c * TotalPrice) -(Importe_cuota_extra__c * N_Cuotas_Extra__c))/ N_Cuotas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe cuota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>