force-app/main/default/objects/Quote/fields/Importe_cuota_extra__c.field-meta.xml
<CustomField>
    <fullName>Importe_cuota_extra__c</fullName>
    <formula>Opportunity.Importe_Cuota_Extra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe cuota extra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>