force-app/main/default/objects/Quote/fields/Importe_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Importe_Escritura__c</fullName>
    <formula>(Opportunity.Pago_Escritura__c * TotalPrice) + (( Opportunity.Pago_Contrato__c * TotalPrice) - Importe_Plan_de_pagos__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>