force-app/main/default/objects/Quote/fields/Importe_firma_contrato__c.field-meta.xml
<CustomField>
    <fullName>Importe_firma_contrato__c</fullName>
    <formula>IF ( ISPICKVAL( Opportunity.Tipo_de_Reserva__c, &quot;Reserva con IVA&quot; ), (Opportunity.Pago_Contrato_al_contado__c * TotalPrice) - Opportunity.Reserva__c  ,  

IF ( ISPICKVAL( Opportunity.Tipo_de_Reserva__c, &quot;Reserva sin IVA&quot; ), Opportunity.Pago_Contrato_al_contado__c * TotalPrice ,
null ))</formula>
    <label>Importe firma contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>