force-app/main/default/objects/Quote/fields/Importe_Plan_de_pagos__c.field-meta.xml
<CustomField>
    <fullName>Importe_Plan_de_pagos__c</fullName>
    <formula>(Importe_cuota_extra__c*N_Cuotas_Extra__c)+(N_Cuotas__c*Importe_cuota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Plan de pagos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>