force-app/main/default/objects/Quote/fields/Importe_reserva__c.field-meta.xml
<CustomField>
    <fullName>Importe_reserva__c</fullName>
    <formula>Opportunity.Reserva__c</formula>
    <label>Importe reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>