force-app/main/default/objects/Quote/fields/N_Cuotas__c.field-meta.xml
<CustomField>
    <fullName>N_Cuotas__c</fullName>
    <formula>Opportunity.N_Cuotas__c</formula>
    <label>Nº Cuotas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>