force-app/main/default/objects/Quote/fields/N_Cuotas_Extra__c.field-meta.xml
<CustomField>
    <fullName>N_Cuotas_Extra__c</fullName>
    <formula>Opportunity.Numero_Cuotas_Extra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº Cuotas Extra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>